--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
 numpy
+pandas==1.3.3
 opencv_python
 Pillow
 torchfile
 torchvision
-Flask
+flask==2.0.1
 Jinja2
 Werkzeug
 click
 gunicorn
 scikit-image==0.17.2
-scikit-learn==0.23.1
+scikit-learn==0.24.2
 scipy==1.4.1
 sklearn==0.0
 soupsieve==2.0.1
 vaderSentiment==3.3.2
+nltk==3.6.5
